with steps to check for npm path
Added steps to check for path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:       
+    - name: Print Environment Variables
+      run: |
+        echo "GitHub Actions Environment:"
+        env
+        echo "Which npm:"
+        which npm
+          
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
