--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,13 @@ jobs:
     #     env
     #     echo "Which npm:"
     #     which npm
-          
+    - name: Print Node.js and npm Versions
+      run: |
+        echo "Node.js version: $(node -v)"
+        echo "npm version: $(npm -v)"
+    
+
+
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
       with:
