--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,4 @@ jobs:
           git pull origin main
           git status
           /home/soteria/.nvm/versions/node/v18.20.2/bin/npm install --only=prod
+          /home/soteria/.nvm/versions/node/v18.20.2/bin/npm run build
