--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,4 @@ jobs:
           git status
           /home/soteria/.nvm/versions/node/v18.20.2/bin/npm install --only=prod
           /home/soteria/.nvm/versions/node/v18.20.2/bin/npm run build
+          pm2 restart strapi
