--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-cloud": "4.20.2",
-    "@strapi/plugin-i18n": "4.20.2",
-    "@strapi/plugin-users-permissions": "4.20.2",
-    "@strapi/strapi": "4.20.2",
-    "better-sqlite3": "8.6.0",
+    "@strapi/plugin-cloud": "4.25.0",
+    "@strapi/plugin-i18n": "4.25.0",
+    "@strapi/plugin-users-permissions": "4.25.0",
+    "@strapi/strapi": "4.25.0",
+    "better-sqlite3": "^11.0.0",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2",
     "react": "^18.0.0",
@@ -30,7 +30,7 @@
     "uuid": "b6fc1392-902b-4964-884a-3ab39fb9ddda"
   },
   "engines": {
-    "node": "^18.0.0",
+    "node": "^20.0.0",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
